--- a/app/src/main/res/layout/fragment_personalinfo.xml
+++ b/app/src/main/res/layout/fragment_personalinfo.xml
@@ -1,16 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context="com.android.mads.madses.PersonalInfoFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Personal"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true" />
+    <Space
+        android:layout_width="20px"
+        android:layout_height="30px" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edtxt_register_dob"
+            android:layout_width="270dp"
+            android:layout_height="40dp"
+            android:ems="10"
+            android:hint="Date Of Birth"
+            android:inputType="date" />
+
+        <ImageButton
+            android:id="@+id/ibtn_register_calender"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_action_calendar_day" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_houseno"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="House Number, Building Name"
+        android:maxLength="20"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_streetname"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="Area, Street Name"
+        android:maxLength="20"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_city"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="City"
+        android:maxLength="20"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_state"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="State"
+        android:maxLength="20"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_country"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="Country"
+        android:maxLength="20"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Blood Group" />
+
+        <Space
+            android:layout_width="20px"
+            android:layout_height="0px" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </LinearLayout>
