--- a/app/src/main/res/layout/fragment_vechicleinfo.xml
+++ b/app/src/main/res/layout/fragment_vechicleinfo.xml
@@ -3,14 +3,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.android.mads.madses.VechicleInfoFragment">
 
+    <Space
+        android:layout_width="20px"
+        android:layout_height="50px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_vechiclename"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="Vechicle Name"
+        android:maxLength="20"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="50px" />
+
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vechicle"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true" />
+        android:paddingLeft="50dp"
+        android:text="Fuel Type"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="50dp">
+
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Petrol" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Diseal" />
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Gas" />
+    </RadioGroup>
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="30px" />
+
+    <EditText
+        android:id="@+id/edtxt_register_mileage"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        android:hint="Mileage"
+        android:inputType="number"
+        android:maxLength="2"
+        android:maxLines="1" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="30px" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Sign Up" />
 </LinearLayout>
